--- a/Faust.PetShopApp.Infrastructure.Data/Faust.PetShopApp.Infrastructure.Data.csproj
+++ b/Faust.PetShopApp.Infrastructure.Data/Faust.PetShopApp.Infrastructure.Data.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Faust.PetShopApp.Domain\Faust.PetShopApp.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    </ItemGroup>
+
 </Project>
