--- a/Faust.PetShopApp.WebApi/Faust.PetShopApp.WebApi.csproj
+++ b/Faust.PetShopApp.WebApi/Faust.PetShopApp.WebApi.csproj
@@ -17,4 +17,10 @@
       <ProjectReference Include="..\Faust.PetShopApp.Infrastructure.Data\Faust.PetShopApp.Infrastructure.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Dto\OwnerDto" />
+      <Folder Include="Dto\PetDto" />
+      <Folder Include="Dto\PetTypeDto" />
+    </ItemGroup>
+
 </Project>
