--- a/Faust.PetShopApp.Infrastructure.Data/Faust.PetShopApp.Infrastructure.Data.csproj
+++ b/Faust.PetShopApp.Infrastructure.Data/Faust.PetShopApp.Infrastructure.Data.csproj
@@ -11,6 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     </ItemGroup>
 
